// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataViewControls should match snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding-top: 1rem;
  padding-bottom: 1rem;
  width: 100%;
}

.emotion-0 >*:not(:first-child) {
  margin-left: 0.75rem;
}

<div
    class="emotion-0"
  >
    DataViewControls
  </div>
</DocumentFragment>
`;

exports[`DataViewControls should match snapshot as sticky 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding-top: 1rem;
  padding-bottom: 1rem;
  width: 100%;
  -webkit-position: sticky;
  position: sticky;
  top: 0rem;
}

.emotion-0 >*:not(:first-child) {
  margin-left: 0.75rem;
}

<div
    class="emotion-0"
  >
    DataViewControls
  </div>
</DocumentFragment>
`;
